--- a/css/styles.css
+++ b/css/styles.css
@@ -1,68 +1,116 @@
-body{
-    font-family: 'Montserrat';
+body {
+  font-family: "Montserrat";
 }
-#title{
-    background-color: #ff4c68;
-    color: #fff;
+#title {
+  background-color: #ff4c68;
+  color: #fff;
 }
-h1{
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
-    font-size: 3rem;
-    line-height: 1.5;
+h1 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+  font-size: 3.5rem;
+  line-height: 1.5;
 }
-.container-fluid{
-    padding: 3% 15%;
+h2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 3rem;
+  line-height: 1.5;
+}
+h3 {
+  font-family: "Montserrat", sans-serif;
+
+  font-size: 1.5rem;
+}
+.container-fluid {
+  padding: 3% 15% 7%;
 }
 
 /* NavBar  */
-.navbar-brand{
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 2.5rem;
+.navbar-brand {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 2.5rem;
 }
-.nav-item{
-    padding: 0px 18px;
+.nav-item {
+  padding: 0px 18px;
 }
-.navbar{
-    padding: 0 0 4.5rem;
+.navbar {
+  padding: 0 0 4.5rem;
 }
-.nav-link{
-    font-size: 1.2rem;
+.nav-link {
+  font-size: 1.2rem;
 }
 
-
-.download-btn{
-    margin: 5% 3% 5% 0;
+.download-btn {
+  margin: 5% 3% 5% 0;
 }
 
 /* Title Img  */
-#titile-img{
-    transform: rotate(25deg);
-    width:60%;
+#titile-img {
+  transform: rotate(25deg);
+  width: 60%;
+  position: absolute;
+  right: 20%;
 }
 
 /* Features */
-#features{
-    width:75%;
-    margin: 8% auto 50px auto;
+#features {
+  padding: 7% 15%;
+  background-color: #fff;
+  position: relative;
+
+  text-align: center;
+}
+.features-icon {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  font-size: 3rem;
+  padding-bottom: 20px;
+  color: #ef8172;
+}
+.features-icon:hover {
+  color: #ff4c68;
+}
+.features-title {
+  font-family: "Montserrat";
+  font-weight: 700;
+}
+.features-p {
+  color: #bfbfbf;
+  padding: 15px;
+}
+
+/* Testimonials  */
+#testimonials {
+  
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
+}
+.testimonial-image{
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+.carousel-item{
+    padding: 7% 15%;
+}
+/* Press  */
+#press{
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+.press-logo{
+    width: 15%;
+    margin: 20px 20px 50px;
+}
+/* Pricing  */
+#pricing{
+    padding: 100px;
     text-align: center;
 }
-.features-icon{
-    display: inline-block;
-    width: 100%;
-    text-align: center;
-    font-size: 3rem;
-    padding-bottom: 20px;
-    color: #ef8172;
-}
-.features-icon:hover{
-    color: #ff4c68;
-}
-.features-title{
-    font-family: "Montserrat";
-    font-weight: 700;
-}
-.features-p{
-    color: #bfbfbf;
-    padding: 15px;
+.pricing-column{
+    padding:3% ;
 }
