--- a/css/styles.css
+++ b/css/styles.css
@@ -1,116 +1,193 @@
 body {
-  font-family: "Montserrat";
-}
-#title {
-  background-color: #ff4c68;
-  color: #fff;
+    font-family: "Montserrat";
 }
 h1 {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 900;
-  font-size: 3.5rem;
-  line-height: 1.5;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 900;
+    font-size: 3.5rem;
+    line-height: 1.5;
 }
-h2 {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 700;
-  font-size: 3rem;
-  line-height: 1.5;
-}
-h3 {
-  font-family: "Montserrat", sans-serif;
 
-  font-size: 1.5rem;
+h2 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 3rem;
+    line-height: 1.5;
 }
+
+h3 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 1.5rem;
+}
+
+#title {
+    background-color: #ff4c68;
+    color: #fff;
+}
+
+
+
 .container-fluid {
-  padding: 3% 15% 7%;
+    padding: 3% 15% 7%;
 }
+
 
 /* NavBar  */
+
 .navbar-brand {
-  font-family: "Ubuntu", sans-serif;
-  font-size: 2.5rem;
+    font-family: "Ubuntu", sans-serif;
+    font-size: 2.5rem;
 }
+
 .nav-item {
-  padding: 0px 18px;
+    padding: 0px 18px;
 }
+
 .navbar {
-  padding: 0 0 4.5rem;
+    padding: 0 0 4.5rem;
 }
+
 .nav-link {
-  font-size: 1.2rem;
+    font-size: 1.2rem;
 }
 
 .download-btn {
-  margin: 5% 3% 5% 0;
+    margin: 5% 3% 5% 0;
 }
+
 
 /* Title Img  */
+
 #titile-img {
-  transform: rotate(25deg);
-  width: 60%;
-  position: absolute;
-  right: 20%;
+    transform: rotate(25deg);
+    width: 60%;
+    position: absolute;
+    right: 7.5%;
 }
+
 
 /* Features */
-#features {
-  padding: 7% 15%;
-  background-color: #fff;
-  position: relative;
 
-  text-align: center;
+#features {
+    padding: 7% 15%;
+    background-color: #fff;
+    position: relative;
+    text-align: center;
 }
+
 .features-icon {
-  display: inline-block;
-  width: 100%;
-  text-align: center;
-  font-size: 3rem;
-  padding-bottom: 20px;
-  color: #ef8172;
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    font-size: 3rem;
+    padding-bottom: 20px;
+    color: #ef8172;
 }
+
 .features-icon:hover {
-  color: #ff4c68;
+    color: #ff4c68;
 }
+
 .features-title {
-  font-family: "Montserrat";
-  font-weight: 700;
+    font-family: "Montserrat";
+    font-weight: 700;
 }
+
 .features-p {
-  color: #bfbfbf;
-  padding: 15px;
+    color: #bfbfbf;
+    padding: 15px;
 }
+
 
 /* Testimonials  */
+
 #testimonials {
-  
-  text-align: center;
-  background-color: #ef8172;
-  color: #fff;
+    text-align: center;
+    background-color: #ef8172;
+    color: #fff;
 }
-.testimonial-image{
+
+.testimonial-image {
     width: 10%;
     border-radius: 100%;
     margin: 20px;
 }
-.carousel-item{
+
+.carousel-item {
     padding: 7% 15%;
 }
+
+
 /* Press  */
-#press{
+
+#press {
     background-color: #ef8172;
     text-align: center;
     padding-bottom: 3%;
 }
-.press-logo{
+
+.press-logo {
     width: 15%;
     margin: 20px 20px 50px;
 }
+
+
 /* Pricing  */
-#pricing{
+
+#pricing {
     padding: 100px;
     text-align: center;
 }
-.pricing-column{
-    padding:3% ;
+
+.pricing-column {
+    padding: 3%;
+}
+
+/* CTA */
+#cta{
+    background-color: #ff4c68;
+    color: #fff;
+    text-align: center;
+    font-family: "Montserrat"; 
+    padding:7% 5%;      
+}
+.cta-heading{
+    font-weight: 900;
+    font-size: 3.5rem;
+    line-height: 1.5;
+}
+
+/* Footer  */
+footer{
+    text-align: center;
+    margin: 3% 0;
+    font-family: "Montserrat";
+}
+.footer a{
+    text-decoration: none;
+}
+.footer-p{
+    font-weight: 300;
+    color: #bfbfbf;
+}
+.footer-icon{
+    color: #000;
+    padding: 2rem 1.5rem;
+    font-size: 150%;
+}
+.footer-icon:hover{
+    color: rgb(36, 35, 35);
+    
+}
+
+/* ResponsiveWeb */
+
+@media (max-width:992px){
+    #title {
+        text-align: center;
+    }
+    #titile-img {
+        position: static;
+        transform: rotate(0deg);
+    }
 }
