--- a/css/styles.css
+++ b/css/styles.css
@@ -183,11 +183,23 @@ footer{
 /* ResponsiveWeb */
 
 @media (max-width:992px){
+    :root{
+        font-size: 32px;
+    }
+    body{
+        font-size: 2rem;
+    }
+    .navbar{
+        font-size: 2rem;
+    }
     #title {
         text-align: center;
     }
     #titile-img {
         position: static;
         transform: rotate(0deg);
+    }
+    img{
+        width: 20%;
     }
 }
