--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,7 @@ h3 {
     background-color: #fff;
     position: relative;
     text-align: center;
+    font-size: 2rem;
 }
 
 .features-icon {
@@ -184,7 +185,7 @@ footer{
 
 @media (max-width:992px){
     *{
-        overflow: hidden;
+        overflow-x: hidden;
     }
     :root{
         font-size: 32px;
@@ -202,7 +203,22 @@ footer{
         position: static;
         transform: rotate(0deg);
     }
-    img{
+    .testimonial-image {
         width: 20%;
+        border-radius: 100%;
+        margin: 20px;
     }
+    .testimonials-em{
+        display: block;
+    }
+   h2{
+       font-size: 1.5rem;
+   }
+   .carousel{
+       height: 100%;
+   }
+   p{
+       font-size: 1.2rem;
+   }
 }
+
