--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 body {
     font-family: "Montserrat";
 }
+html {
+    scroll-behavior:smooth;
+  }
 h1 {
     font-family: "Montserrat", sans-serif;
     font-weight: 900;
@@ -215,7 +218,7 @@ footer{
        font-size: 1.5rem;
    }
    .carousel{
-       height: 100%;
+       height: 50vh;
    }
    p{
        font-size: 1.2rem;
